--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.9'
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.9'
     implementation group: 'org.springframework', name: 'spring-test', version: '5.3.9'
+    implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.9' // transaction
 
     // https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
@@ -72,6 +73,17 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.5'
+
+    // https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
+    implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.7'
+
+    // https://mvnrepository.com/artifact/org.aspectj/aspectjrt
+    implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.9.7'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-aop
+    implementation group: 'org.springframework', name: 'spring-aop', version: '5.3.9'
+
+    implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.14'
 
 
 }
